add judge dashboard
